# medA2A_implementation

./: .env  .gitignore  .medA2A.config.sample.json  .medA2A.prompts.sample.json  LICENSE  QUICKSTART.md  README.md  USAGE_GUIDE.md  debug_mcp.py  debug_mcp_integration.py  debug_params_error.py  diagnose.py  example_api_usage.py  example_questions.json  example_questions.txt  omcp_wrapper.py  pyproject.toml  run_medical_a2a.py  run_simple.sh  test_db_connection.py  test_mcp_debug.py  test_mcp_integration.py  test_mcp_stdio.py
src/med_a2a_omop/: config.py  prompts.py  run_omop_agent.py  runner.py  setup.py
src/med_a2a_omop.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/med_a2a_omop/agents/: omop_database_agent.py  orchestrator_agent.py
src/med_a2a_omop/integrations/: mcp_official.py
src/med_a2a_omop/models/: a2a_messages.py
