
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "med_a2a_omop"
version = "0.1.0"
description = "A multi-agent framework for medical Q&A on OMOP data."
dependencies = [
    "python-dotenv",
    "uvicorn[standard]",
    "fastapi",
    "ollama",
    "a2a-medical-foundation @ git+https://github.com/fastomop/omcp_a2a.git@feature/medical-a2a-framework",
    "httpx>=0.28.1",
    "fastmcp",
    "mcp>=1.12.1",
]

[project.scripts]
# Main application entry point
run-med-a2a = "med_a2a_omop.runner:main"

# Setup and validation tool
med-a2a-setup = "med_a2a_omop.setup:main"

